--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -11,19 +11,19 @@ jobs:
     runs-on: ubuntu-latest
 
     # Not included in lab but necessary for CodeQL to function
-    permissions:
-      actions: read
-      contents: read
-      security-events: write  
+    # permissions:
+    #   actions: read
+    #   contents: read
+    #   security-events: write  
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
+        uses: github/codeql-action/init@v4
         with:
           languages: python
 
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+        uses: github/codeql-action/analyze@v4
