--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
 
     # Not included in lab but necessary for CodeQL to function
-    # permissions:
-    #   actions: read
-    #   contents: read
-    #   security-events: write  
+    permissions:
+      actions: read
+      contents: read
+      security-events: write  
 
     steps:
       - name: Checkout code
